--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,3 @@
-redo draftbots into something more basic
-draft can hang
-rss feed doesn't work
 Cards Packages page doesn't load
 Top cards and Search cards pages:
 	don't have elo
@@ -12,8 +9,12 @@ have usernames pre-loaded everywhere
 have cube images pre-loaded everywhere
 fix proptypes - use object proptypes when possible
 cube elo and pick rate / pick count not propogated
+draft can hang
 
 Investigate
 	- is indexing of cubes correct after updates? does the most recently cube get put at top of list?
 	- Make sure feed works as intended
 	- new session, login from landing seems to not work then redirect to landing with no error?
+
+Eventually
+redo draftbots into something more basic
