--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,3 @@
-draftbots always pick first card in pack
 password recovery might not be working
 draft can hang
 Capitalization issues on front end
@@ -19,3 +18,4 @@ have cube images pre-loaded everywhere
 fix proptypes - use object proptypes when possible
 add timestamp (not just date) to history tab
 quickly switching cards between deck and sideboard during a sealed playtest, a few cards got duplicated
+batch get and batch put use cache!!
