--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,11 @@
 password recovery might not be working
-draft can hang
 Capitalization issues on front end
 analytics script resets elo to 1200 instead of loading previous state
 login/logout not consistently working
 upload bulk with issues page broken
 
 Investigate
+	- drafts freezing is b/c they are getting stuck in "done" state by mistake, possible that we're not checking this in a consistent way?
 	- is indexing of cubes correct after updates? does the most recently cube get put at top of list?
 	- Make sure feed works as intended
 	- new session, login from landing seems to not work then redirect to landing with no error?
