--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,7 @@
 card page graph labels are off by one
 https://cubecobradev.com/cube/list/Testing101testtest
 	maybeboard is visible despite setting turned off
-Capitalization issues on front end
+https://cubecobradev.com/markdown crashes
 
 
 
@@ -21,4 +21,6 @@ don't display mainboard header in changelist/changelog if only mainboard was cha
 tag colors don't display in list view
 don't update cube hashes for followers changes or deck count changes. have this be picked up by sweeper
 drafts freezing is b/c they are getting stuck in "done" state by mistake, possible that we're not checking this in a consistent way?
+Capitalization issues on front end
+
 
