add functions to move cards between boards

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,5 @@
 
-https://cubecobradev.com/markdown crashes
-
-
+[feature] move card to different board
 
 Investigate
 	- validate cache works correctly
@@ -19,5 +17,5 @@ tag colors don't display in list view
 don't update cube hashes for followers changes or deck count changes. have this be picked up by sweeper
 drafts freezing is b/c they are getting stuck in "done" state by mistake, possible that we're not checking this in a consistent way?
 Capitalization issues on front end
-
+capitalize board names in cube, including board drop down select
 
