--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
-http://cubecobradev.com/cube/list/8211cf67-6d66-4aee-98e6-2c2b0f886c86?f=ledger
-	even with show unsorted enabled
+view all recent drafts of your cubes broken
+
 
 Investigate
 	- validate patreon integration
@@ -17,3 +17,21 @@ capitalize board names in cube, including board drop down select
 when adding through add to cube modal, put in pending changes instead of updating DB
 Filter doesn't work on Tokens page
 
+
+
+GAME DAY!
+
+1. Take down prod server by setting downtime flag
+2. Run mongodump to s3: https://bansalnagesh.medium.com/backing-up-mongodb-on-aws-ec2-to-s3-b045b5727fd6
+3. Meanwhile, setup new enviornment and validate it works correctly
+	- security groups for elasticache, and our cache
+	- make sure multiplayer drafting looks good
+4. When 2 is done, download from s3 to local
+5. delete nodecube on local
+5. Run mongorestore to local
+6. set env variables to prod
+7. run createtables, migratetables, then migrate drafts
+8. when 7 is done, change dns to point to new enviornment
+9. run analytics scripts
+10. delete old enviornment
+11. write some release notes :D
