--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,12 @@
+followers on cubes still being wiped
 some lingering issues with multiple edits w/o refresh
+"Maramas" can't access account overview
+explore->recently drafted cubes empty
+https://cubecobra.com/user/view/60f1de4a0526d010295cbb81
+	can't login
+im getting this wierd error when i type "sync" into the "card to add" field. adding other cards works fine its just typing the word "sync" causes an error
+When I try a grid draft with 2 player local, it still does a bot draft.
+add limit to recent drafts of your cube on dashboard
 
 after multiplayer draft, non-host seats error
 seat names should include player name or bot instead of just the deck color
@@ -22,8 +30,8 @@ filtercollapse should require a submit button again
 look into failed deck migrations and get those moved over too
 
 
-
-
 multiplayer drafting
- - create an endpoint to dump all the redis state and return json
- - request users to report broken draft ids
+
+fbd0f99f-7e82-4145-b8bc-82115f1c6224
+	Got stuck, picks were piling up on seat 7 and bot picks were not being made
+	after refresh, things were working normally and draft finished
