add new ml model

--- a/todo.txt
+++ b/todo.txt
@@ -16,6 +16,14 @@ I am no longer getting any notifications
 and the "your cubes" list on the main dashboard is no longer sorted by last edited/updated date
 it just seems locked in whatever order it happened to be in before the last update
 apostrophies don't work for autocard markdown
+anchors on the overview pages broken? They don't seem to go to take you to any particular spot on the page
+in multiplayer drafts, the non host seats look like bots
+can't filter recommendations by maybeboard anymore
+legality=modern shouldn't include cards banned in modern
+accepting content creator application times out
+I have a cube with multiples of cards, and I can now only change out one at a time. When I try and swap them all at the same time, only one gets updated
+remigrate patron levels, as a lot are -1 for some reason	
+add battle as type
 
 after multiplayer draft, non-host seats error
 seat names should include player name or bot instead of just the deck color
@@ -44,3 +52,15 @@ multiplayer drafting
 fbd0f99f-7e82-4145-b8bc-82115f1c6224
 	Got stuck, picks were piling up on seat 7 and bot picks were not being made
 	after refresh, things were working normally and draft finished
+
+
+
+3 exports
+	cube lists
+	deck lists
+		mainboard
+		sideboard
+	draft picks
+		pack
+		pick
+		pool
