--- a/todo.txt
+++ b/todo.txt
@@ -41,10 +41,11 @@ fbd0f99f-7e82-4145-b8bc-82115f1c6224
 	Got stuck, picks were piling up on seat 7 and bot picks were not being made
 	after refresh, things were working normally and draft finished
 
-# december
+# december-
 [x] fix patreon integration
 [x] fix featured queue
-[ ] add lambda for auto podcast integration, featured queue rotation
+[x] add lambda for auto podcast integration, featured queue rotation
 [ ] add checksum to cube changes to prevent duplicate changes from being added
 [ ] fix packages
+[ ] fix content creator dashboard
 [ ] investigate why drafts are getting stuck
