--- a/todo.txt
+++ b/todo.txt
@@ -48,7 +48,9 @@ fbd0f99f-7e82-4145-b8bc-82115f1c6224
 [x] fix podcast fetching
 [x] podcast fetch doesn't include body
 [x] can't change email for account
+[x] fix special characters in version specific editing
 [ ] fix content creator dashboard
+[ ] fix notice dismissal
 [ ] fix packages
 [ ] add checksum to cube changes to prevent duplicate changes from being added
 [ ] investigate why drafts are getting stuck
